--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>UNO Game</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<button id="unoButton" style="display:none;" onclick="pressUno()">UNO</button>
 <body>
     <div id="game-container">
         <div id="deck"></div>
