--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>UNO Game</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<div id="deck">
+<img id="deckCard" src="images/back.png" alt="Deck Card">
+</div>
+
 <button id="unoButton" style="display:none;" onclick="pressUno()">UNO</button>
 <body>
     <div id="game-container">
