--- a/index.html
+++ b/index.html
@@ -20,3 +20,14 @@
     <script src="script.js"></script>
 </body>
 </html>
+<html lang="ja">
+    <meta charset="UTF-8">
+<body>
+    <div id="playerHand"></div>
+    <div id="ai1Hand"></div>
+    <div id="ai2Hand"></div>
+    <div id="ai3Hand"></div>
+    <button id="unoButton" onclick="callUno()">UNO!</button>
+    <script src="script.js"></script>
+</body>
+</html>
