--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div id="deck">
 <img id="deckCard" src="images/back.png" alt="Deck Card">
 </div>
-
+<button id="dealButton" onclick="dealInitialHands()">カードを配る</button>
 <button id="unoButton" style="display:none;" onclick="pressUno()">UNO</button>
 <body>
     <div id="game-container">
