--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     <div id="ai1Hand"></div>
     <div id="ai2Hand"></div>
     <div id="ai3Hand"></div>
-    <button id="unoButton" onclick="callUno()">UNO!</button>
-    <script src="script.js"></script>
+    <div id="discardPile"></div>
 </body>
 </html>
